public/amls.css
/* ... */
form .inline .block-label + fieldset {
  float: none;
  margin-top: 0;
}

form .date .form-field,
form .date .form-group {
  clear: none;
  float: left;
  margin-right: 20px;
  width: 60px;
}

form .date .form-field input[type="text"],
form .date .form-group input[type="text"],
form .date .form-field input[type="number"],
form .date .form-group input[type="number"] {
  width: 100%;
}

form .inline > label.block-label {
  clear: none;
}

form .inline .block-label {
  clear: both;
}


.clear:before,
.clear:after {
  content: '';
  display: table;
}

.clear:after {
  clear: both;
}

.clear {
  *zoom: 1;
}

.visuallyhidden-legend > legend {
  border: 0;
  clip: rect(0 0 0 0);
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}


/* summary styles */

table.summary-title {
  width: 88%;
}

table.summary {
  table-layout: fixed;
  font-size: 16px;
  margin-bottom: 20px;
}

table.summary th {
  vertical-align: top;
}

table.summary th.edit {
  font-weight: normal;
}

table.summary td {
  word-break: break-all;
}

table.summary ul li {
  font-size: 16px;
  margin-bottom: 0;
}

.panel-indent {
  /*margin-bottom: 40px;*/
}

fieldset .panel-indent {
  margin-bottom: 0;
}

.check-your-answers {
  margin-bottom: 20px;
  word-break: break-word;
}

.check-your-answers__listing {
  margin: 0 0 10px;
}

.check-your-answers,
.check-your-answers__listing {
  border-bottom: 1px solid #bfc1c3;
  padding: 0 0 .52632em 0;
  word-break: break-word;
}


/* class for older browsers; pseudo-class for modern browsers */

.check-your-answers__last,
.check-your-answers:last-of-type,
.check-your-answers__listing:last-of-type {
  border: 0;
}

.check-your-answers header {
  padding: 0;
}

.check-your-answers h2 {
  margin-bottom: 0;
  margin-top: 0;
  padding: 0 0 .52632em 0;
}

.check-your-answers .list,
.check-your-answers .list li,
.check-your-answers p {
  margin-top: 0;
  margin-bottom: 1.05263em;
}

.check-your-answers .list li {
  margin-bottom: .05263em;
}

.check-your-answers .edit,
.check-your-answers--list li,
.check-your-answers--header .heading-xsmall {
  font-size: 16px;
  word-wrap: break-word;
}

.check-your-answers .change-answer {
  color: #005ea5;
  font-weight: bold;
  line-height: 1.25;
  margin: 0 0 .21053em;
  text-decoration: underline;
}

.check-your-answers__footer {
  text-align: right;
  vertical-align: middle;
}

.list--listing .check-your-answers__footer {
  text-align: left;
}


/* cheap fix before S&T */

.check-your-answers .question {
  word-break: break-word;
}

.check-your-answers .answer {
  width: 120px;
}

@media (max-width: 640px) {
  .check-your-answers .grid-layout--stacked .grid-layout__column {
    display: table-cell;
  }
  .check-your-answers dd,
  .check-your-answers dt,
  .check-your-answers .edit,
  .check-your-answers--list li,
  .check-your-answers--header .heading-xsmall {
    font-size: 14px;
  }
  form .form-control {
    width: 100%;
  }
}

.list--comma li,
.list--semicolon li,
.list--inline li {
  display: inline;
  padding-right: 0;
}

.lte-ie8 .list--comma li,
.lte-ie8 .list--semicolon li,
.lte-ie8 .list--inline li {
  display: list-item;
}

.list--comma li::after {
  content: ', ';
}

.list--semicolon li::after {
  content: '; ';
}

.list--comma li:last-child::after,
.list--semicolon li:last-child::after {
  content: '';
}

.icon-confirmed {
  /* we're using the same tick as the progress page,
     which is HUGE, so we need to resize it */
  background-size: cover;
  height: 55px;
  margin: -15px 0 -15px -15px;
  width: 55px;
}

.touchevents .date-of-birth {
  display: block;
}

.summary-table a:link,
.summary-table a:visited,
.summary-table a:hover {
  color: #005ea5;
}

.summary-table a:link,
.summary-table a:visited {
  text-decoration: none;
}

.summary-table a:hover {
  text-decoration: underline;
}

.summary-table .first-section {
  border-top: 1px solid #bfc1c3;
}

.summary-table th {
  font-size: 24px;
  padding-bottom: 10px;
  padding-top: 15px;
}

.login-name {
  float: right;
  font-size: 16px;
  margin-top: 10px;
  margin: 0;
  padding: 10px 0 10px 0;
  text-align: right;
}

.heading-secondary {
  font-weight: 400;
  line-height: 1.25;
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 9px;
}

.locked,
.heading-secondary {
  color: #6f777b;
}

.panel-border-wide {
  border-left-width: 10px;
}


/* style the selects as close to inputs as possible,
 * because they'll flash on the screen before being replaced. */

.js [data-auto-complete],
.js .custom-combobox-input,
.js .ui-autocomplete-input {
  -webkit-appearance: none;
  background-color: transparent;
  border-radius: 0;
  height: 37px;
  width: 220px;
}

.js *[data-toggle-new] {
  display: none;
}

fieldset.panel-indent {
  box-sizing: border-box;
  padding-top: 10px;
}

fieldset.panel-indent legend {
  float: left;
}

.reg-online--pay-fee .heading-large {
  display: block;
  margin: 0;
}


/* status page */

.status-list {
  margin-left: 0;
  margin-right: 30px;
  padding-left: 0;
}

.status-list li {
  line-height: 1.25;
  list-style-position: inside;
  padding: 18px 55px 10px 10px;
  position: relative;
}

.status-list--start {
  border-top: 3px solid #bfc1c3;
}

.status-list--end {
  border-bottom: 3px solid #bfc1c3;
}

.status-list--upcoming {
  background: #bfc1c3;
  color: #fff;
}

@media screen and (max-width: 640px) {
  .status-list {
    margin-right: 0;
  }
}

.status-list .status-list--complete {
  background-color: #006435;
  background-position: 96%;
  background-size: 12%;
  color: #fff;
}

.declaration {
  background: #f8f8f8;
  border-bottom: #dee0e2 solid 3px;
  margin: 0;
  padding: 20px;
}

.panel-border-wide {
  border-left-width: 10px;
}

.progress-steps__amend .progress-step--status {
  display: flex;
}

.progress-steps__amend .progress-step--status-time {
  align-self: center;
  flex: 1;
  padding-bottom: 15px;
}
/* ... */

